--- a/style.css
+++ b/style.css
@@ -117,7 +117,16 @@ h2 {
     font-weight: bold;
 }
 
+h1, h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
 #subtitle {
     font-size: 2em;
     padding-bottom: 90px;
 }
+
