--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
     display: block;
     text-align: center;
     padding-top: 19px;
-    width: 230px;
+    margin: 0;
 }
 
 .exp1, .exp2 {
